--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <p>This is here so I can learn Git</p>
+  <p>This is here so I can learn Git. Now it's modified</p>
+    <p>This is a new paragraph</p>
 </body>
