--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <title>learn git</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script type="text/javascript" src="./baz.js"></script>
+
 </head>
 <body>
   <p>This is here so I can learn Git. Now it's modified</p>
     <p>This is a new paragraph</p>
 </body>
+
