--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>learn git</title>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <script type="text/javascript" src="./baz.js"></script>
+  <script type="text/javascript" src="./bs.js"></script>
 
 </head>
 <body>
